--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.lts15_sept_2022">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LTS15Sept2022"
         tools:targetApi="31">
+        <activity
+            android:name=".Re_Enter_Password"
+            android:exported="false" />
+        <activity
+            android:name=".Enter_Code"
+            android:exported="false" />
+        <activity
+            android:name=".Select_Plan"
+            android:exported="false" />
         <activity
             android:name=".Forgot_Password"
             android:exported="false" />
